--- a/app/src/main/res/layout/activity_send_notification.xml
+++ b/app/src/main/res/layout/activity_send_notification.xml
@@ -112,7 +112,7 @@
         android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="ID of notification"
-        android:inputType="textMultiLine"
+        android:inputType="number"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notificationDetails" />
